--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "@livepeer/react": "^2.1.0",
     "@livepeer/react-native": "^1.1.0",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@w3ui/react-keyring": "https://pkg.csb.dev/web3-storage/w3ui/commit/0e795822/@w3ui/react-keyring",
     "@w3ui/react-uploader": "https://pkg.csb.dev/web3-storage/w3ui/commit/0e795822/@w3ui/react-uploader",
-    "dotenv": "^16.0.3",
+    "@xmtp/xmtp-js": "^7.7.3",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-camera-pro": "github:jchris/react-camera-pro",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^4.0.3",
+    "wagmi": "^0.9.6",
+    "xmtp-react-chat-example": "github:xmtp/example-chat-react"
   },
   "scripts": {
     "start": "react-scripts start",
